CSS FIX: Aligning user message to start of chat bubble

--- a/css/_chat.scss
+++ b/css/_chat.scss
@@ -287,6 +287,7 @@
 
     .usermessage {
         white-space: pre-wrap;
+        text-align: start;
     }
 
     &.error {
